k8/base/api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: api
spec:
  selector:
    app: api-v1
  ports:
    - port: 8080
      name: api
    - port: 9090
      name: metrics
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-01
  labels:
    app: api
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: api-v1
  template:
    metadata:
      labels:
        app: api-v1
    spec:
      containers:
        - name: api
          image: tableland/api
          imagePullPolicy: Always
          ports:
            - name: api
              containerPort: 8080
            - name: metrics
              containerPort: 9090
          command: ["./api"]
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /healthz
              port: api
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /healthz
              port: api
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 3
          volumeMounts:
            - name: validator-config
              mountPath: /app/config.json
              subPath: config.json
      volumes:
        - name: validator-config
          configMap:
            name: configmap-validator-config
            items:
              - key: config-validator-staging.json
                path: config.json
